package com.beerstoresystem.catalog.domain.model

data class BeerStyle(
    val id: Long,
    val name: String,
    val description: String?
)
