package com.beerstoresystem.catalog.domain.model

data class PackageType(
    val id: Long,
    val code: String,
    val name: String
)
